--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "allowJs": true,
     "checkJs": true,
     "outDir": "./build",
-    "rootDir": ".",
+    "rootDir": "./src",
     "noEmit": false,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
